tests/errors/var_exist_54/e1.src
.IPPcode21

MOVE GF@a int@5
